##
##  Regina - A Normal Surface Theory Calculator
##  Makefile Template
##
##  Process this file with automake in the top-level directory
##  to produce Makefile.in.
##

KDE_OPTIONS=noautodist

pylibdir = $(pkgdatadir)/pylib

pylib_DATA = README.txt \
  loadCensus.py \
  packetType.py

EXTRA_DIST = $(pylib_DATA)

