##
##  Regina - A Normal Surface Theory Calculator
##  Makefile Template
##
##  Process this file with automake in the top-level directory
##  to produce Makefile.in.
##

scriptsdir = $(pkgdatadir)/scripts

scripts_DATA = README.txt \
  regscript_expandlist \
  regscript_misc \
  regscript_opt \
  regscript_readopts

EXTRA_DIST = $(scripts_DATA)

