##
##  Regina - A Normal Surface Theory Calculator
##  Makefile Template
##
##  Process this file with automake in the top-level directory
##  to produce Makefile.in.
##

scriptsdir = $(pkgdatadir)/scripts

scripts_DATA = README.txt \
  regscript_opt \
  regscript_readopts \
  runscript.py

EXTRA_DIST = $(scripts_DATA)

