##
##  Regina - A Normal Surface Theory Calculator
##  Makefile Template
##
##  Process this file with automake in the top-level directory
##  to produce Makefile.in.
##

KDE_OPTIONS=noautodist

scriptsdir = $(pkgdatadir)/scripts

scripts_DATA = README.txt runscript.py

EXTRA_DIST = $(scripts_DATA)

