##
##  Regina - A Normal Surface Theory Calculator
##  Makefile Template
##
##  Process this file with automake in the top-level directory
##  to produce Makefile.in.
##

EXTRA_DIST = dataformat.sgml dataformat.ent \
  line.sgml \
  packet-container.sgml \
  packet-script.sgml \
  packet-text.sgml \
  packet.sgml \
  reginadata.sgml \
  tag.sgml \
  text.sgml \
  var.sgml

