##
##  Regina - A Normal Surface Theory Calculator
##  Makefile Template
##
##  Process this file with automake in the top-level directory
##  to produce Makefile.in.
##

EXTRA_DIST = dataformat.sgml dataformat.ent \
  allowstrict.sgml \
  allowtaut.sgml \
  cancrush.sgml \
  compact.sgml \
  connected.sgml \
  euler-surface.sgml \
  flags.sgml \
  line.sgml \
  orbl.sgml \
  packet-anglestructurelist.sgml \
  packet-container.sgml \
  packet-normalsurfacelist.sgml \
  packet-script.sgml \
  packet-text.sgml \
  packet.sgml \
  params.sgml \
  realbdry.sgml \
  reginadata.sgml \
  struct.sgml \
  surface.sgml \
  tag.sgml \
  text.sgml \
  twosided.sgml \
  var.sgml

