##
##  Regina - A Normal Surface Theory Calculator
##  Makefile Template
##
##  Process this file with automake in the top-level directory
##  to produce Makefile.in.
##

EXTRA_DIST = dataformat.sgml dataformat.ent \
  abeliangroup.sgml \
  allowstrict.sgml \
  allowtaut.sgml \
  cancrush.sgml \
  compact-filter.sgml \
  compact-surface.sgml \
  connected.sgml \
  euler-filter.sgml \
  euler-surface.sgml \
  filter-combination.sgml \
  filter-properties.sgml \
  filter.sgml \
  flags.sgml \
  fundgroup.sgml \
  group.sgml \
  H1.sgml \
  H1Bdry.sgml \
  H1Rel.sgml \
  H2.sgml \
  line.sgml \
  op.sgml \
  orbl-filter.sgml \
  orbl-surface.sgml \
  packet-anglestructurelist.sgml \
  packet-container.sgml \
  packet-normalsurfacelist.sgml \
  packet-script.sgml \
  packet-surfacefilter.sgml \
  packet-text.sgml \
  packet.sgml \
  params.sgml \
  realbdry-filter.sgml \
  realbdry-surface.sgml \
  reginadata.sgml \
  reln.sgml \
  struct.sgml \
  surface.sgml \
  tag.sgml \
  text.sgml \
  twosided.sgml \
  var.sgml

