##
##  Regina - A Normal Surface Theory Calculator
##  Makefile Template
##
##  Process this file with automake in the top-level directory
##  to produce Makefile.in.
##

KDE_OPTIONS=noautodist

INCLUDES = @ENGINE_INCLUDES@

algebraincludedir = $(pkgincludedir)/algebra

noinst_LTLIBRARIES = libalgebra.la

libalgebra_la_SOURCES = marked_abeliangroup.cpp nabeliangroup.cpp ngrouppresentation.cpp nxmlalgebrareader.cpp

algebrainclude_HEADERS = marked_abeliangroup.h nabeliangroup.h ngrouppresentation.h nxmlalgebrareader.h

