##
##  Regina - A Normal Surface Theory Calculator
##  Makefile Template
##
##  Process this file with automake in the top-level directory
##  to produce Makefile.in.
##

KDE_OPTIONS=noautodist

INCLUDES = @ENGINE_INCLUDES@

algebraincludedir = $(pkgincludedir)/algebra

noinst_LTLIBRARIES = libalgebra.la

libalgebra_la_SOURCES = nabeliangroup.cpp ngrouppresentation.cpp nmarkedabeliangroup.cpp nxmlalgebrareader.cpp nbinaryA5.cpp nbinaryS4.cpp
## ncellulardata.cpp

algebrainclude_HEADERS = nabeliangroup.h ngrouppresentation.h nmarkedabeliangroup.h nxmlalgebrareader.h nbinaryA5.h nbinaryS4.h
## ncellulardata.h

